[gd_scene load_steps=3 format=3 uid="uid://ocg758a60gxi"]

[ext_resource type="Script" path="res://weapons/enemyWeapon.gd" id="1_eyc82"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="2_3ftal"]

[node name="EnemyWeapon" type="Node2D"]
script = ExtResource("1_eyc82")

[node name="WeaponSprite" type="Sprite2D" parent="."]

[node name="Muzzle" type="Marker2D" parent="."]

[node name="ProjectileSpawner" type="Node2D" parent="."]
script = ExtResource("2_3ftal")

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
